[package]
name = "aipedia-runner"
version = "0.1.0"
edition = "2021"
description = "Rust workflow orchestrator for AiPedia repeatable operations"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
